--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-cssmin": "^0.1.7",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.3",
+    "gulp-image-resize": "^0.10.0",
     "gulp-replace": "^0.5.4",
     "gulp-sort": "^2.0.0",
     "gulp-stylus": "^2.5.0",
