--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creonit-markup",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Creonit markup",
   "author": "Creonit <dev@creonit.ru>",
   "license": "MIT",
@@ -38,6 +38,7 @@
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.3",
     "gulp-image-resize": "^0.10.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sort": "^2.0.0",
     "gulp-stylus": "^2.5.0",
