--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "creonit-markup",
-  "version": "1.1.8",
+  "version": "1.2.0",
   "description": "Creonit markup",
   "author": "Creonit <dev@creonit.ru>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/creonit-dev/markup"
+  },
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-	"install": "cp gulpfile.js ../../gulpfile.js"
+    "install": "cp gulpfile.js ../../gulpfile.js"
   },
   "build": {
     "source": {
@@ -28,31 +32,35 @@
       "sprites": "./web/sprites",
       "html": "./web"
     },
+    "buster": {
+      "path": "./../var"
+    },
     "external": false
   },
   "dependencies": {
-	"gulp": "^3.9.1",
+    "browser-sync": "^2.18.7",
+    "gulp": "^3.9.1",
+    "gulp-buster": "^1.1.0",
     "gulp-cheerio": "^0.6.2",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.1.7",
-    "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.0.3",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sort": "^2.0.0",
-    "gulp-stylus": "^2.5.0",
+    "gulp-stylus": "^2.6.0",
     "gulp-svgmin": "^1.2.3",
     "gulp-twig": "^0.7.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "gulp.spritesmith": "^6.2.1",
+    "gulp-uglify": "^2.0.1",
+    "gulp-util": "^3.0.8",
+    "gulp.spritesmith": "^6.3.0",
     "main-bower-files": "^2.13.1",
-    "merge-stream": "^1.0.0",
-	"merge": "^1.2.0",
+    "merge": "^1.2.0",
+    "merge-stream": "^1.0.1",
     "nib": "^1.1.2",
     "run-sequence": "^1.2.2",
     "streamqueue": "^1.1.1",
-    "through": "^2.3.8",
-	"browser-sync": "^2.16.0"
+    "through": "^2.3.8"
   }
 }
