--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   },
   "dependencies": {
     "browser-sync": "^2.18.7",
+    "babel-preset-es2015": "^6.22.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-sourcemaps": "^2.4.1",
     "gulp": "^3.9.1",
     "gulp-buster": "^1.1.0",
     "gulp-cheerio": "^0.6.2",
