--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creonit-markup",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Creonit markup",
   "author": "Creonit <dev@creonit.ru>",
   "repository": {
@@ -58,6 +58,7 @@
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.3.0",
+    "rupture": "^0.6.2",
     "main-bower-files": "^2.13.1",
     "merge": "^1.2.0",
     "merge-stream": "^1.0.1",
