--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creonit-markup",
-  "version": "1.4.2",
+  "version": "1.5.0",
   "description": "Creonit markup",
   "author": "Creonit <dev@creonit.ru>",
   "repository": {
@@ -15,6 +15,7 @@
   "build": {
     "source": {
       "path": "./src",
+      "app": "/app",
       "js": "/js",
       "css": "/css",
       "html": "/html",
@@ -27,6 +28,7 @@
     "destination": {
       "path": "./web",
       "external_path": "./../web",
+      "app": "/js",
       "js": "/js",
       "css": "/css",
       "images": "/images",
@@ -42,6 +44,10 @@
   },
   "dependencies": {
     "browser-sync": "^2.18.7",
+    "browserify": "^14.4.0",
+    "babelify": "^7.3.0",
+    "vinyl-source-stream": "^1.1.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-es2015": "^6.22.0",
     "gulp-babel": "^6.1.2",
     "gulp-sourcemaps": "^2.4.1",
