--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creonit-markup",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "Creonit markup",
   "author": "Creonit <dev@creonit.ru>",
   "repository": {
@@ -47,6 +47,7 @@
     "browserify": "^14.4.0",
     "babelify": "^7.3.0",
     "vinyl-source-stream": "^1.1.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-es2015": "^6.22.0",
     "gulp-babel": "^6.1.2",
