--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "vinyl-source-stream": "^1.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
     "gulp-babel": "^6.1.2",
     "gulp-sourcemaps": "^2.4.1",
     "gulp": "^3.9.1",
