--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creonit-markup",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "description": "Creonit markup",
   "author": "Creonit <dev@creonit.ru>",
   "repository": {
@@ -47,10 +47,17 @@
     "browserify": "^14.4.0",
     "babelify": "^7.3.0",
     "vinyl-source-stream": "^1.1.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-env": "^1.7.0",
-    "gulp-babel": "^6.1.2",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/runtime": "^7.8.3",
+    "gulp-better-rollup": "^4.0.1",
+    "rollup": "^1.29.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp": "^3.9.1",
     "gulp-buster": "^1.1.0",
